# projects

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml
.jupyter/lab/settings/: overrides.json
src/SSM/: S4.py  cnn.ipynb  example.ipynb  experiments.ipynb  legendre.ipynb  main.py  ssm.py  test.ipynb
src/notebook/: charTokenizer.ipynb  charTokenizer.py  dataloader.ipynb  dataloader.py  dataset.ipynb  dataset.py  fft2Model.py  fftModel.py  freqModel.py  gpt2like.ipynb  model.py  path.py  projects.ipynb  train.ipynb  wiki.ipynb
src/notebook/.devcontainer/: devcontainer.json
