[project]
name = "projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "huggingface-hub>=0.30.2",
    "notebook>=7.4.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "wikiextractor",
]

[tool.uv.sources]
wikiextractor = { git = "https://github.com/prokotg/wikiextractor" }
